--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,22 @@
 
         <ul class="contact-list list">
             <li class="contact-item">
-                 <a href="mailto:info@devstudio.com" class="contact-link active link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="contact-link active link">
+                <svg class="contact-social-icon" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="contact-item">
-                 <a href="tel:+380961111111" class="contact-link active link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="contact-link active link">
+                  <svg class="contact-social-icon" width="10" height="16">
+                      <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                  +38 096 111 11 11
+              </a>
             </li>
-            
-        </ul>
+          </ul>
         </div>
   </header>
 
@@ -160,22 +169,58 @@
 <!--Footer-->
 
 <footer class="footer">
-    <div class="container">
-    <a href="" class="logo link logo-footer"><span class="logo-blue">Web</span>Studio</a>
-   <address class="footer-address"> 
-        <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-list list">
+    <div class="container footer-wrapper">
+      <div>
+        <a href="" class="logo link"><span class="logo-blue">Web</span>Studio</a>
+        <address class="footer-address">
+          <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="footer-list list">
             <li class="footer-item">
-                <a href="mailto:info@example.com" class="footer-contact active link">info@example.com</a>
+              <a href="mailto:info@example.com" class="footer-contact active link"
+                >info@example.com</a
+              >
             </li>
             <li class="footer-item">
-                <a href="tel:+380991111111" class="footer-contact active link">+38 099 111 11 11</a>
+              <a href="tel:+380991111111" class="footer-contact active link">+38 099 111 11 11</a>
             </li>
+          </ul>
+        </address>
+      </div>
+      <div class="footer-social-wrapper">
+        <p class="footer-social-text">Присоединяйтесь</p>
+        <ul class="footer-social list">
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link link">
+              <svg class="footer-social-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link link">
+              <svg class="footer-social-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link link">
+              <svg class="footer-social-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link link">
+              <svg class="footer-social-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
-    </address>
+      </div>
     </div>
- </footer>
-
+  </footer>
 
 </body>
 </html>
