--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="portfolio-link link">
                 <img src="./images/portfolio-img/tehno-1.jpg" alt="откритий сайт" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Технокряк</h2>
@@ -89,7 +89,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/poster-2.jpg" alt="баскетболисты" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -98,7 +98,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/restaurant-3.jpg" alt="лого ресторана" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -107,7 +107,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/prime-4.jpg" alt="наушники" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Проект Prime</h2>
@@ -116,7 +116,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/boxes-5.jpg" alt="коробки" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Проект Boxes</h2>
@@ -125,7 +125,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/inspiration-6.jpg" alt="откритий сайт" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -134,7 +134,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/journal-7.jpg" alt="откритий журнал" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Издание Limited Edition</h2>
@@ -143,7 +143,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/project-lab-8.jpg" alt="бирка" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Проект LAB</h2>
@@ -152,7 +152,7 @@
                 </a>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link">
+                <a href="" class="link portfolio-link">
                 <img src="./images/portfolio-img/business-9.jpg" alt="открытое приложение" width="370" height="294" class="portfolio-img">
                 <div class="wrapper-card">
                 <h2 class="portfolio-title">Growing Business</h2>
